--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ ndarray = { version = "0.15", optional = true }
 # Async
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
+futures = "0.3"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -28,6 +29,7 @@ anyhow = "1.0"
 # Utilities
 hex = "0.4"
 once_cell = "1.19"
+sha3 = "0.10"
 
 # Caching
 sled = "0.34"
